force-app/main/default/objects/Journal_Product__c/Journal_Product__c.object-meta.xml
<CustomObject>
    <description>Tracks physical journal products published on Amazon KDP, Etsy, and other platforms. Part of the Journal Business module.</description>
    <label>Journal Product</label>
    <nameField>
        <label>Journal Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>