force-app/main/default/objects/Journal_Product__c/fields/Amazon_ASIN__c.field-meta.xml
<CustomField>
    <fullName>Amazon_ASIN__c</fullName>
    <externalId>true</externalId>
    <label>Amazon ASIN</label>
    <length>20</length>
    <type>Text</type>
    <description>Amazon Standard Identification Number (if cross-selling on Amazon KDP)</description>
</CustomField>