force-app/main/default/objects/Journal_Product__c/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <label>Base Price</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
    <description>Retail price for this journal SKU</description>
</CustomField>