force-app/main/default/objects/Journal_Product__c/fields/Binding_Type__c.field-meta.xml
<CustomField>
    <fullName>Binding_Type__c</fullName>
    <label>Binding Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perfect Bound</fullName>
            </value>
            <value>
                <fullName>Coil Bound</fullName>
            </value>
            <value>
                <fullName>Hardcover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of binding used for journal</description>
</CustomField>