force-app/main/default/objects/Journal_Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moon &amp; Lunar</fullName>
            </value>
            <value>
                <fullName>Wellness &amp; Mental Health</fullName>
            </value>
            <value>
                <fullName>Spiritual &amp; Witchcraft</fullName>
            </value>
            <value>
                <fullName>LGBTQIA+</fullName>
            </value>
            <value>
                <fullName>Practical Life</fullName>
            </value>
            <value>
                <fullName>Garden &amp; Homestead</fullName>
            </value>
            <value>
                <fullName>Fitness &amp; Wellness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Journal category for filtering and organization</description>
</CustomField>