force-app/main/default/objects/Journal_Product__c/fields/Cover_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Cover_Image_URL__c</fullName>
    <label>Cover Image URL</label>
    <type>Url</type>
    <description>URL to product cover image for Pinterest and social media</description>
</CustomField>