force-app/main/default/objects/Journal_Product__c/fields/Cover_Material__c.field-meta.xml
<CustomField>
    <fullName>Cover_Material__c</fullName>
    <label>Cover Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matte Paper</fullName>
            </value>
            <value>
                <fullName>Glossy Paper</fullName>
            </value>
            <value>
                <fullName>Hardcover Board</fullName>
            </value>
            <value>
                <fullName>Linen - Black</fullName>
            </value>
            <value>
                <fullName>Linen - Navy</fullName>
            </value>
            <value>
                <fullName>Linen - Burgundy</fullName>
            </value>
            <value>
                <fullName>Linen - Forest Green</fullName>
            </value>
            <value>
                <fullName>Linen - Cream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Cover material type (paper, hardcover, linen)</description>
</CustomField>