force-app/main/default/objects/Journal_Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Product description for storefront and marketing</description>
</CustomField>