force-app/main/default/objects/Journal_Product__c/fields/Etsy_Listing_ID__c.field-meta.xml
<CustomField>
    <fullName>Etsy_Listing_ID__c</fullName>
    <label>Etsy Listing ID</label>
    <length>50</length>
    <type>Text</type>
    <description>Etsy listing ID if product is cross-sold on Etsy</description>
</CustomField>