force-app/main/default/objects/Journal_Product__c/fields/Foil_Stamp_Color__c.field-meta.xml
<CustomField>
    <fullName>Foil_Stamp_Color__c</fullName>
    <label>Foil Stamp Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Rose Gold</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Foil stamping color for luxury tier products</description>
</CustomField>