force-app/main/default/objects/Journal_Product__c/fields/Has_Ribbon_Bookmark__c.field-meta.xml
<CustomField>
    <fullName>Has_Ribbon_Bookmark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ribbon Bookmark</label>
    <type>Checkbox</type>
    <description>TRUE if journal includes sewn-in ribbon bookmark (premium/luxury tiers)</description>
</CustomField>