force-app/main/default/objects/Journal_Product__c/fields/Is_Condensed_Version__c.field-meta.xml
<CustomField>
    <fullName>Is_Condensed_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Condensed Version</label>
    <type>Checkbox</type>
    <description>TRUE if this version was condensed to meet coil binding 400-page limit</description>
</CustomField>