force-app/main/default/objects/Journal_Product__c/fields/Key_Features__c.field-meta.xml
<CustomField>
    <fullName>Key_Features__c</fullName>
    <label>Key Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Bullet points listing key features for product page</description>
</CustomField>