force-app/main/default/objects/Journal_Product__c/fields/Lulu_Print_Cost__c.field-meta.xml
<CustomField>
    <fullName>Lulu_Print_Cost__c</fullName>
    <label>Lulu Print Cost</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Cost per unit from Lulu Print API (excluding shipping)</description>
</CustomField>