force-app/main/default/objects/Journal_Product__c/fields/Lulu_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Lulu_Product_ID__c</fullName>
    <externalId>true</externalId>
    <label>Lulu Product ID</label>
    <length>100</length>
    <type>Text</type>
    <description>Product ID from Lulu Print API after upload</description>
</CustomField>