force-app/main/default/objects/Journal_Product__c/fields/Page_Count__c.field-meta.xml
<CustomField>
    <fullName>Page_Count__c</fullName>
    <label>Page Count</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <description>Total number of pages in journal</description>
</CustomField>