force-app/main/default/objects/Journal_Product__c/fields/Paper_Color__c.field-meta.xml
<CustomField>
    <fullName>Paper_Color__c</fullName>
    <label>Paper Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
                <default>true</default>
                <label>White</label>
            </value>
            <value>
                <fullName>Cream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Interior paper color (white standard, cream premium)</description>
</CustomField>