force-app/main/default/objects/Journal_Product__c/fields/Paper_Weight__c.field-meta.xml
<CustomField>
    <fullName>Paper_Weight__c</fullName>
    <label>Paper Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60#</fullName>
                <default>true</default>
                <label>60#</label>
            </value>
            <value>
                <fullName>70#</fullName>
            </value>
            <value>
                <fullName>80#</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Paper weight (60# standard, 70#/80# premium)</description>
</CustomField>