force-app/main/default/objects/Journal_Product__c/fields/Parent_Journal_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Journal_Name__c</fullName>
    <label>Parent Journal Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <description>Base journal name for grouping variations (e.g., "Gratitude Journal" for all SKU variations)</description>
</CustomField>