force-app/main/default/objects/Journal_Product__c/fields/Pinterest_Pin_URL__c.field-meta.xml
<CustomField>
    <fullName>Pinterest_Pin_URL__c</fullName>
    <label>Pinterest Pin URL</label>
    <type>Url</type>
    <description>URL to Pinterest marketing pin for this product</description>
</CustomField>