force-app/main/default/objects/Journal_Product__c/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <label>Product Image URL</label>
    <type>Url</type>
    <description>URL to primary product mockup image from Canva</description>
</CustomField>