force-app/main/default/objects/Journal_Product__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <externalId>true</externalId>
    <label>Product SKU</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <description>Unique SKU identifier (e.g., GRAT-6x9-HC for Gratitude Journal 6x9 Hardcover)</description>
</CustomField>