force-app/main/default/objects/Journal_Product__c/fields/Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin__c</fullName>
    <label>Profit Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <formula>IF(Base_Price__c > 0,
    (Base_Price__c - Lulu_Print_Cost__c) / Base_Price__c,
    0
)</formula>
    <description>Calculated profit margin percentage</description>
</CustomField>