force-app/main/default/objects/Journal_Product__c/fields/Related_NeuroThrive_Feature__c.field-meta.xml
<CustomField>
    <fullName>Related_NeuroThrive_Feature__c</fullName>
    <label>Related NeuroThrive Feature</label>
    <length>255</length>
    <type>Text</type>
    <description>Cross-reference to SafeHaven/NeuroThrive app features for recommendations</description>
</CustomField>