force-app/main/default/objects/Journal_Product__c/fields/Trim_Size__c.field-meta.xml
<CustomField>
    <fullName>Trim_Size__c</fullName>
    <label>Trim Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6x9</fullName>
            </value>
            <value>
                <fullName>8.5x11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Physical trim size of journal</description>
</CustomField>